# flood-agent

./: .gitignore  AgentTwin-Flood-Requirements.md  README.md  pyproject.toml  洪水预警系统_API接口说明.md  系统整体框架简要说明.md
3D_visual/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
3D_visual/public/: scene-config.json
3D_visual/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
docs/: README.md
docs/agent_twin_upgrade/: 01_PRD_产品需求说明.md  02_业务流程设计.md  03_系统架构设计.md  04_数据模型设计.md  05_知识图谱与本体设计.md  06_智能体设计.md  07_Prompt与工具调用设计.md  08_API接口设计.md  08_API接口设计_V3.md  09_前端UIUX原型说明.md  10_测试与评测方案.md  11_前端实施拆解.md  12_开发任务清单.md  13_按模块实施顺序.md  14_数据库问题清单与修复建议.md  15_演示主库重建方案.md  16_甲方演示脚本.md  17_可交付重构说明.md  README.md
docs/archive/: 三类RAG详细设计.md  洪水预警系统_Agent架构重设计.md  洪水预警系统_最终方案.md  洪水预警系统_灾后补偿设计说明.md  申请书_升级设计方案.md
docs/current_baseline/: README.md  洪水预警系统_API接口说明.md  洪水预警系统_主动预警主动请示需求文档.md  洪水预警系统_前后端与总体功能总结.md  系统整体框架简要说明.md
docs/v2_baseline/: README.md  洪水预警系统_主动预警主动请示需求文档.md  洪水预警系统_前后端与总体功能总结.md
flood_system/: __init__.py  api.py  config.py  models.py  rag.py  rag_runtime.py  repository.py  sample_data.py  system.py
flood_system/bootstrap_data/: area_profiles.csv  entity_profiles.beilin_10km2.json  observations_beilin_extreme.csv  observations_beilin_mild.csv  observations_beilin_warning.csv  roads.csv  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: inspect_demo_db.py  rebuild_demo_db.py  run_llm_e2e_smoke.py  start-demo.ps1
tests/: test_beilin_dataset.py  test_rag.py  test_system.py
(+195 files in other folders)
